# servicenow-data-access-request

./: Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
api/: servicenow_client.py
gui/: main_window.py
gui/widgets/: __init__.py  field_widget.py
scheduler/: request_scheduler.py
tests/: conftest.py  test_api_client.py  test_integration.py  test_scheduler.py
